# solidity-mutate

./: .gitignore  README.md  pyproject.toml
examples/test_contract/: foundry.toml
examples/test_contract/contracts/: StakeVault.sol  Vault.sol
examples/test_contract/test/: Test.sol
examples/test_contract/tests/: test_stake_vault.t.sol  test_vault.t.sol
src/solidity_mutate/: __init__.py  cli.py
src/solidity_mutate/mutators/: __init__.py  as_flip.py  as_rem.py  common.py  op_ari.py  op_asg.py  op_eq.py  req_flip.py  req_rem.py
